--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
   },
   "dependencies": {
     "@tailwindcss/forms": "^0.3.2",
+    "apexcharts": "^3.30.0",
+    "daisyui": "^1.16.2",
     "react": "^17.0.0",
+    "react-apexcharts": "^1.3.9",
+    "react-circular-progressbar": "^2.0.4",
     "react-dom": "^17.0.0",
     "react-helmet": "^6.1.0",
     "react-router": "^5.2.0",
